# Zephyr-Examples

./: README.md
user-mode/user_mode_kernel_object/: prj.conf
user-mode/user_mode_kernel_object/src/: main.c
user-mode/user_mode_separate/: CMakeLists.txt  prj.conf
user-mode/user_mode_separate/apps/app_a/: CMakeLists.txt  app_a.c
user-mode/user_mode_separate/apps/app_b/: CMakeLists.txt  app_b.c
user-mode/user_mode_separate/apps/shared/: CMakeLists.txt  shared.c
user-mode/user_mode_separate/src/: main.c
user-mode/user_mode_simple/: CMakeLists.txt  prj.conf
user-mode/user_mode_simple/src/: main.c
